err/gb-openapi-codec.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/coreapi'...
Listing './lib/python3.5/site-packages/coreapi/codecs'...
Listing './lib/python3.5/site-packages/coreapi/transports'...
Listing './lib/python3.5/site-packages/coreapi-2.3.3.dist-info'...
Listing './lib/python3.5/site-packages/coreschema'...
Listing './lib/python3.5/site-packages/coreschema/encodings'...
Listing './lib/python3.5/site-packages/coreschema/templates'...
Listing './lib/python3.5/site-packages/coreschema/templates/bootstrap3'...
Listing './lib/python3.5/site-packages/coreschema/templates/bootstrap3/inputs'...
Listing './lib/python3.5/site-packages/coreschema-0.0.4.egg-info'...
Listing './lib/python3.5/site-packages/gb_openapi_codec'...
Listing './lib/python3.5/site-packages/gb_openapi_codec/python-openapi-codec'...
Listing './lib/python3.5/site-packages/gb_openapi_codec/python-openapi-codec/.git'...
Listing './lib/python3.5/site-packages/gb_openapi_codec/python-openapi-codec/.git/hooks'...
Listing './lib/python3.5/site-packages/gb_openapi_codec/python-openapi-codec/.git/info'...
Listing './lib/python3.5/site-packages/gb_openapi_codec/python-openapi-codec/.git/logs'...
Listing './lib/python3.5/site-packages/gb_openapi_codec/python-openapi-codec/.git/logs/refs'...
Listing './lib/python3.5/site-packages/gb_openapi_codec/python-openapi-codec/.git/logs/refs/heads'...
Listing './lib/python3.5/site-packages/gb_openapi_codec/python-openapi-codec/.git/logs/refs/remotes'...
Listing './lib/python3.5/site-packages/gb_openapi_codec/python-openapi-codec/.git/logs/refs/remotes/origin'...
Listing './lib/python3.5/site-packages/gb_openapi_codec/python-openapi-codec/.git/objects'...
Listing './lib/python3.5/site-packages/gb_openapi_codec/python-openapi-codec/.git/objects/pack'...
Listing './lib/python3.5/site-packages/gb_openapi_codec/python-openapi-codec/.git/refs'...
Listing './lib/python3.5/site-packages/gb_openapi_codec/python-openapi-codec/.git/refs/heads'...
Listing './lib/python3.5/site-packages/gb_openapi_codec/python-openapi-codec/.git/refs/remotes'...
Listing './lib/python3.5/site-packages/gb_openapi_codec/python-openapi-codec/.git/refs/remotes/origin'...
Listing './lib/python3.5/site-packages/gb_openapi_codec/python-openapi-codec/openapi_codec'...
Listing './lib/python3.5/site-packages/gb_openapi_codec/python-openapi-codec/tests'...
Listing './lib/python3.5/site-packages/gb_openapi_codec-1.3.5.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/itypes-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/uritemplate'...
Listing './lib/python3.5/site-packages/uritemplate-3.0.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
